feat(auth pages added nestjs app): auth pages added

--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "@tailwindcss/forms": "^0.5.0"
   }
 }
