--- a/packages/uber-eats/package.json
+++ b/packages/uber-eats/package.json
@@ -6,12 +6,25 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.0",
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^6.11.4",
     "remark": "^14.0.1",
-    "remark-html": "^15.0.0"
+    "remark-html": "^15.0.0",
+    "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.30",
+    "@types/react": "^18.0.8",
+    "@types/react-dom": "^18.0.3",
+    "autoprefixer": "^10.4.5",
+    "next-images": "^1.8.4",
+    "postcss": "^8.4.13",
+    "typescript": "^4.6.4"
   }
 }
