--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -13,10 +13,10 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: "Use NodeJS 14"
-        uses: actions/setup-node@v2
+      - name: "Use NodeJS 20"
+        uses: actions/setup-node@v3
         with:
-          node-version: "14"
+          node-version: 20.x
 
       - name: "Setup npm" # Add our registry to npm config
         run: | # Custom action
