--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,10 +17,10 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: "Use NodeJS 14"
-        uses: actions/setup-node@v2
+      - name: "Use NodeJS 20"
+        uses: actions/setup-node@v3
         with:
-          node-version: "14"
+          node-version: 20.x
 
       - name: "Version and publish" # Interesting step
         env:
