--- a/packages/uber-eats/package.json
+++ b/packages/uber-eats/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "echo \"Error: run tests from root\""
   },
   "dependencies": {
     "@next/font": "13.1.6",
