fix(cicd): missing package-json and script test

--- a/packages/restaurant-dashboard/package.json
+++ b/packages/restaurant-dashboard/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@thiendang/dashboard",
-  "version": "0.0.0",
+  "name": "@thiendang/restaurant-dashboard",
+  "version": "1.0.0",
   "description": "> TODO: description",
   "author": "thiendang <tarun.softengg@gmail.com>",
   "homepage": "https://github.com/thiendang/uber-eats-clone-app#readme",
